--- a/index.html
+++ b/index.html
@@ -124,11 +124,14 @@
             </form>
         </div>
     </section>
+    <!--    section five ends here  -->
 </body>
 
+<!--    footer starts here  -->
 <footer>
     <h1>Be Humble</h1>
     <h5>I'm gonna do it</h5>
 </footer>
+<!--    footer ends here  -->
 
 </html>
