--- a/index.html
+++ b/index.html
@@ -35,21 +35,11 @@
                 solely for charitable efforts.</p>
         </div>
         <div class="money-select">
-            <div class="tk">
-                <p>100tk</p>
-            </div>
-            <div class="tk-200">
-                <p>200tk</p>
-            </div>
-            <div class="tk">
-                <p>500tk</p>
-            </div>
-            <div class="tk">
-                <p>1000tk</p>
-            </div>
-            <div class="tk">
-                <p>5000tk</p>
-            </div>
+            <input type="submit" class="tk" value="100tk">
+            <input type="submit" class="tk-200" value="200tk">
+            <input type="submit" class="tk" value="500tk">
+            <input type="submit" class="tk" value="1000tk">
+            <input type="submit" class="tk" value="5000tk">
         </div>
         <div class="input-amount">
             <input type="number" class="other-amount" name="" id="other-amount" placeholder="Other Amount (Taka)">
