--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!--    section one starts here  -->
     <section class="section-one">
-        <div class="background"></div>
+        <!-- <div class="background"></div> -->
         <div class="container">
             <h1 class="container-header">Donate People<br>In Extreme Need</h1>
             <p class="container-p">We are changing lives with your helps. It is simple act of kindness.<br> Let's help
